--- a/UIKitWhatsApp/Base.lproj/Main.storyboard
+++ b/UIKitWhatsApp/Base.lproj/Main.storyboard
@@ -78,6 +78,75 @@ enter your phone number</string>
             </objects>
             <point key="canvasLocation" x="1057.2519083969464" y="-34.507042253521128"/>
         </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="c3T-VD-j1G">
+            <objects>
+                <viewController storyboardIdentifier="chatView" id="Uiy-bp-GeN" customClass="ChatViewController" customModule="UIKitWhatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MTM-pu-ONC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DJw-n9-Tbi">
+                                <rect key="frame" x="0.0" y="118" width="381" height="666"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="111" translatesAutoresizingMaskIntoConstraints="NO" id="5tw-dI-VEa">
+                                        <rect key="frame" x="0.0" y="0.0" width="381" height="34.333333333333336"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkh-pX-pwY">
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="34.333333333333336"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="gfe-Mo-ft8"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="opS-ak-Odf"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Broadcast Lists"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPR-vS-8yT">
+                                                <rect key="frame" x="261" y="0.0" width="120" height="34.333333333333336"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="120" id="phr-AF-rAd"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="New Group"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8gE-8s-btA">
+                                        <rect key="frame" x="0.0" y="44.333333333333314" width="381" height="621.66666666666674"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6Ml-kZ-NOy">
+                                                <rect key="frame" x="0.0" y="50" width="381" height="43.666667938232422"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Ml-kZ-NOy" id="ijs-bq-ewy">
+                                                    <rect key="frame" x="0.0" y="0.0" width="381" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lpe-9e-y1L"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DJw-n9-Tbi" firstAttribute="bottom" secondItem="lpe-9e-y1L" secondAttribute="bottom" id="3DK-4a-edq"/>
+                            <constraint firstItem="DJw-n9-Tbi" firstAttribute="top" secondItem="lpe-9e-y1L" secondAttribute="top" id="HqZ-I3-dHy"/>
+                            <constraint firstAttribute="trailing" secondItem="DJw-n9-Tbi" secondAttribute="trailing" id="ObN-hk-Tnc"/>
+                            <constraint firstItem="DJw-n9-Tbi" firstAttribute="leading" secondItem="lpe-9e-y1L" secondAttribute="leading" id="sRe-wO-avu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="chatTableView" destination="8gE-8s-btA" id="0AL-og-a91"/>
+                        <outlet property="listButton" destination="fkh-pX-pwY" id="Bdu-s8-Nnf"/>
+                        <outlet property="newGroupButton" destination="MPR-vS-8yT" id="gYR-PV-8B1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FPT-S0-9G0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1770" y="-35"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="X8w-Pj-Ayz">
             <objects>
