Custom chat cell view created.

--- a/UIKitWhatsApp/Base.lproj/Main.storyboard
+++ b/UIKitWhatsApp/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@ enter your phone number</string>
                                         <rect key="frame" x="0.0" y="44.333333333333314" width="381" height="621.66666666666674"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6Ml-kZ-NOy">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6Ml-kZ-NOy" customClass="TableViewCell" customModule="UIKitWhatsApp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="50" width="381" height="43.666667938232422"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Ml-kZ-NOy" id="ijs-bq-ewy">
