--- a/UIKitWhatsApp/StoryBoard/Base.lproj/Main.storyboard
+++ b/UIKitWhatsApp/StoryBoard/Base.lproj/Main.storyboard
@@ -87,39 +87,35 @@ enter your phone number</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DJw-n9-Tbi">
-                                <rect key="frame" x="0.0" y="118" width="381" height="666"/>
+                                <rect key="frame" x="0.0" y="162" width="393" height="622"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="111" translatesAutoresizingMaskIntoConstraints="NO" id="5tw-dI-VEa">
-                                        <rect key="frame" x="0.0" y="0.0" width="381" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="34.333333333333336"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkh-pX-pwY">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="34.333333333333336"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="200" id="gfe-Mo-ft8"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="opS-ak-Odf"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Broadcast Lists"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPR-vS-8yT">
-                                                <rect key="frame" x="261" y="0.0" width="120" height="34.333333333333336"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="120" id="phr-AF-rAd"/>
-                                                </constraints>
+                                                <rect key="frame" x="261" y="0.0" width="132" height="34.333333333333336"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="New Group"/>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8gE-8s-btA">
-                                        <rect key="frame" x="0.0" y="44.333333333333314" width="381" height="621.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="44.333333333333314" width="393" height="577.66666666666674"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6Ml-kZ-NOy" customClass="TableViewCell" customModule="UIKitWhatsApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="50" width="381" height="43.666667938232422"/>
+                                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Ml-kZ-NOy" id="ijs-bq-ewy">
-                                                    <rect key="frame" x="0.0" y="0.0" width="381" height="43.666667938232422"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
@@ -137,6 +133,7 @@ enter your phone number</string>
                             <constraint firstItem="DJw-n9-Tbi" firstAttribute="leading" secondItem="lpe-9e-y1L" secondAttribute="leading" id="sRe-wO-avu"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="yad-Ov-qEs"/>
                     <connections>
                         <outlet property="chatTableView" destination="8gE-8s-btA" id="0AL-og-a91"/>
                         <outlet property="listButton" destination="fkh-pX-pwY" id="Bdu-s8-Nnf"/>
@@ -145,7 +142,7 @@ enter your phone number</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FPT-S0-9G0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1770" y="-35"/>
+            <point key="canvasLocation" x="2695.419847328244" y="-35.211267605633807"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="X8w-Pj-Ayz">
@@ -164,6 +161,24 @@ enter your phone number</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gdK-Au-9bR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="123" y="-35"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2R2-sl-fQz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vBm-Uo-bHE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8j9-dH-98t">
+                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Uiy-bp-GeN" kind="relationship" relationship="rootViewController" id="5SC-fU-0d9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vrr-ft-WWD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1768.7022900763359" y="-35.211267605633807"/>
         </scene>
     </scenes>
     <resources>
